Fix giant memory leak: For pixmap generation, results are stored in a list and harvested in the main thread, in a slot called by an interthread signal. As an optimization, for the thumbnail pregeneration thread, pixmap creation was switched off. Now these two facts interacted: Switching off pixmap creation was implemented by disconnecting the inter-thread signal, and all the thumbnail QImages were never harvested until application shutdown.

BUG: 243692

svn path=/trunk/extragear/graphics/digikam/; revision=1156220